# wiki_craft

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  WIKI_CRAFT.md  knowledge_base_example.toml  package.json  wiki_craft.ingest.toml  wiki_craft.ingest_example.toml  wiki_craft.toml  wiki_craft_example.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
src/: README.md  candidates.rs  compact.rs  config.rs  knowledge.rs  lib.rs  main.rs  metrics.rs  runtime.rs  search.rs  skill.rs  sources.rs  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/llm/: README.md  cache.rs  mod.rs  openai.rs  session.rs  usage.rs
src/support/: audit.rs  metrics.rs  mod.rs  util.rs
src/tools/: README.md  mod.rs  read_file.rs  web_fetch.rs  write_file.rs
