[package]
name = "wiki_craft_desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
wiki_craft = { path = ".." }
